--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <h1 class="texto efeito_scroll_textos">ASSOCIAÇÃO</h1>
         </div>
         <div id="img_home">
-          <img src="/img/fotocaparecortada.jpg" alt="foto da capa" class="efeito_scroll_textos"/>
+          <img src="img/fotocaparecortada.jpg" alt="foto da capa" class="efeito_scroll_textos"/>
           <div>
             <div>
               <h3>Por: @luanatayze</h3>
@@ -156,7 +156,7 @@
         <div id="sobrenos_seta">
           <div>
             <a href="#section_economia"
-              ><img src="/img/bi_arrow-down.png" alt="" class="efeito_scroll"
+              ><img src="img/bi_arrow-down.png" alt="" class="efeito_scroll"
             /></a>
           </div>
         </div>
@@ -320,9 +320,9 @@
           </div>
         </div>
         <div id="banco_img">
-          <img src="/img/coffee-6350849.jpg" alt="" class="efeito_scroll_textos"/>
+          <img src="img/coffee-6350849.jpg" alt="" class="efeito_scroll_textos"/>
           <div id="divflutuando">
-            <img src="/img/Group 1 (4).png" alt="" class="efeito_scroll_textos"/>
+            <img src="img/Group 1 (4).png" alt="" class="efeito_scroll_textos"/>
           </div>
         </div>
       </div>
@@ -364,7 +364,7 @@
                   <section class="modal-content-mapas">
                     <div id="modal-img-sair">
                       <button onclick="fechar()">
-                        <img src="/img/Vector (6).png" alt="" />
+                        <img src="img/Vector (6).png" alt="" />
                       </button>
                     </div>
                     <div>
@@ -392,19 +392,19 @@
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="/img/eggs-944495.jpg" alt="" />
+              <img src="img/eggs-944495.jpg" alt="" />
             </div>
             <div class="swiper-slide">
-              <img src="/img/eggs-944495.jpg" alt="" />
+              <img src="img/eggs-944495.jpg" alt="" />
             </div>
             <div class="swiper-slide">
-              <img src="/img/eggs-944495.jpg" alt="" />
+              <img src="img/eggs-944495.jpg" alt="" />
             </div>
             <div class="swiper-slide">
-              <img src="/img/eggs-944495.jpg" alt="" />
+              <img src="img/eggs-944495.jpg" alt="" />
             </div>
             <div class="swiper-slide">
-              <img src="/img/eggs-944495.jpg" alt="" />
+              <img src="img/eggs-944495.jpg" alt="" />
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -417,8 +417,8 @@
         <div><p>© 2022 todos os direitos reservados</p></div>
         <div>
           <ul>
-            <li><img src="/img/insta.png" alt="" /></li>
-            <li><img src="/img/what.png" alt="" /></li>
+            <li><img src="img/insta.png" alt="" /></li>
+            <li><img src="img/what.png" alt="" /></li>
           </ul>
         </div>
       </footer>
